upgrade yarn. upgrade maven dependencies. upgrade node
