# libs/openapi/openapi-files/src/main/resources/openapi/petapi.yml
@@ -14,6 +14,7 @@ paths:
   /pets:
     get:
       summary: List all pets
+      description: List all pets
       operationId: listPets
       tags:
         - pets
@@ -46,6 +47,7 @@ paths:
                 $ref: "#/components/schemas/Error"
     post:
       summary: Create a pet
+      description: Create a pet
       operationId: createPets
       tags:
         - pets
@@ -64,14 +66,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  /pets/{petId}:
+  /pets/{pet-id}:
     get:
       summary: Info for a specific pet
+      description: Info for a specific pet
       operationId: showPetById
       tags:
         - pets
       parameters:
-        - name: petId
+        - name: pet-id
           in: path
           required: true
           description: The id of the pet to retrieve
